# GardenGate

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  Containerfile  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: clang_format.yml  dll.yml  dll_linux.yml  dll_linux_msvc.yml  launcher.yml  launcher_linux.yml  podman.yml  podman2.yml
Container/: Containerfile
Container/regs/: dll_overrides.reg  gw1.reg  gw2.reg
DLL/: CMakeLists.txt  toolchain-mingw64.cmake
DLL/include/base/: Log.h  Platform.h
DLL/include/core/: Game.h  Hook.h  HookManager.h  Hooks.h  Offsets.h  Program.h  Util.h
DLL/include/sdk/: Array.h  ISocket.h  ISocketAddress.h  ISocketManager.h  IUDPSocket.h  IUDPSocketCreator.h  LevelSetup.h  LevelSetupOption.h  Main.h  Messages.h  Player.h  SecureReason.h  ServerSpawnInfo.h  ServerSpawnOverrides.h  Settings.h  SocketManager.h  SocketManagerFactory.h  Types.h  UDPSocket.h
DLL/src/: dllmain.cpp
Docs/: BFN_LIST.md  BUILDING.md  FAQ.md  GW1_LIST.md  GW1_MapList.md  GW2_LIST.md  GW2_MapList.md  HOSTING.md  HOSTING_CLIENT.md  JOINING.md  LAUNCH_ARGS.md  LINUX.md  LINUX_DEDICATED.md
Launcher/: CMakeLists.txt  Form1.Designer.cs  Form1.cs  Launcher.csproj  Launcher.slnx  Program.cs
Launcher/assets/: app.manifest  resources.rc
Launcher/patches/bfn/Core/: Activation.dll.xdelta  Activation64.dll.xdelta
Launcher/patches/bfn/__Installer/: InstallLog.txt.xdelta  installerdata.xml.xdelta
Launcher/src/: Launcher.cpp  Launcher.hpp
Launcher/src/config/: Config.cpp  Config.hpp
Launcher/src/patcher/: Patcher.cpp  Patcher.hpp
Launcher/src/renderer/: Renderer.cpp  Renderer.hpp
Launcher/src/ui/: Ui.cpp  Ui.hpp
Launcher/src/utils/: Utils.cpp  Utils.hpp
Mods/GW1/: UnlockAll.fbmod
Mods/GW1/src/: UnlockAll.fbproject
Mods/GW2/: AIHax.fbmod  GardenGate.fbpack  OfflineModeLatestCompatible.fbmod  PrivatePlayRemastered.fbmod  UpgradesUnlocker.fbmod  ppr1522_cvdaddon.fbmod
Mods/GW2/src/: OfflineMode + Fixes.fbproject  OfflineMode + GardenGate Extrasl.fbproject  UpgradesUnlocker.fbproject
Mods/bfn/src/: SplitScreen_WarningRemover.fbproject
Mods/gw2/: Anti-AFK_Kick.fbmod  GardenGate.fbpack
Mods/gw2/src/: NoTutorial.fbproject  OfflineMode_Fixes.fbproject
Podman/: Containerfile
docs/: BUILDING.md  FAQ.md  GW2_DOWNGRADE.md  HOSTING.md  JOINING.md  LAUNCH_ARGS.md  LINUX.md  PrivatePlayCompatList.md  PrivatePlay_CompatList.md  gw2_downgrade.md
include/base/: Log.h  Platform.h
include/core/: Game.h  HookManager.h  Hooks.h  Offsets.h  Util.h
include/sdk/: ISocket.h  ISocketAddress.h  ISocketManager.h  IUDPSocket.h  IUDPSocketCreator.h  LevelSetup.h  SecureReason.h  ServerSpawnOverrides.h  SocketManager.h  SocketManagerFactory.h  UDPSocket.h
src/: dllmain.cpp
